--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@zeit/next-css": "^1.0.1",
     "async": "2.1.4",
     "axios": "^0.18.0",
     "dotenv": "4.0.0",
+    "jss": "^9.8.7",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
-    "next": "^5.1.0",
-    "next-redux-wrapper": "^1.3.5",
-    "pug": "2.0.0-beta11",
+    "next": "^7.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react-jss": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "3.15.0",
