--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
     "async": "2.1.4",
     "axios": "^0.18.0",
