--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
     "next": "^7.0.2",
+    "next-compose-plugins": "2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
