--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-id-swiper": "^2.1.2",
     "react-jss": "^8.1.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
