--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.3.1",
     "react-id-swiper": "^1.6.8",
     "react-jss": "^8.1.0",
+    "react-scroll-to-component": "^1.0.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
