--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jss": "^9.8.7",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
+    "moment": "^2.24.0",
     "next": "^7.0.2",
     "next-compose-plugins": "2.2.0",
     "prop-types": "^15.7.2",
