--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^16.3.1",
     "react-id-swiper": "^1.6.8",
     "react-jss": "^8.1.0",
+    "react-loader-advanced": "^1.7.1",
     "react-scroll-to-component": "^1.0.2",
+    "react-spinners": "^0.5.12",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
