--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@zeit/next-css": "^1.0.1",
     "async": "2.1.4",
     "axios": "^0.18.0",
+    "clsx": "^1.0.4",
     "dotenv": "4.0.0",
     "express": "^4.16.4",
     "jss": "^9.8.7",
