--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-paypal-button-v2": "^2.4.1",
     "react-scroll-to-component": "^1.0.2",
     "react-spinners": "^0.5.12",
+    "rimraf": "^3.0.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
