--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "lint": "eslint .",
     "build": "next build",
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "heroku-postbuild": "next build"
   }
 }
