--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "4.0.0",
     "express": "^4.16.4",
     "jss": "^9.8.7",
-    "keystone": "4.0.0-beta.5",
+    "keystone": "4.2.1",
     "lodash": "^4.13.1",
     "moment": "^2.24.0",
     "next": "^7.0.2",
