--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
     "async": "2.1.4",
-    "axios": "^0.18.0",
-    "clsx": "^1.0.4",
+    "axios": "^0.18.1",
+    "clsx": "^1.1.1",
     "dotenv": "4.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "jss": "^9.8.7",
     "keystone": "4.2.1",
-    "lodash": "^4.13.1",
-    "moment": "^2.24.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "next": "^7.0.2",
     "next-compose-plugins": "2.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-id-swiper": "^1.6.8",
     "react-jss": "^8.1.0",
     "react-loader-advanced": "^1.7.1",
     "react-scroll-to-component": "^1.0.2",
     "react-spinners": "^0.5.12",
-    "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "read-excel-file": "^5.0.0",
+    "socket.io": "^2.4.0",
+    "socket.io-client": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "3.15.0",
